--- a/src/sass/fontawesome/_mixins.scss
+++ b/src/sass/fontawesome/_mixins.scss
@@ -103,3 +103,10 @@
     @content;
   }
 }
+
+@mixin tab-focus() {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+}
