--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -34,15 +34,15 @@
   <div class="company-claim">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col col-xs-12 col-md-4 text-left phone-number-wrapper">
+        <div class="col text-left phone-number-wrapper">
           <p class="phone-number">
             <i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222
           </p>
         </div>
-        <div class="col col-xs-12 col-md-4 text-center">
+        <div class="col text-center">
           <a href="#"><img src="./images/logo.png"/></a>
         </div>
-        <div class="col col-xs-12 col-md-4 text-right cart">
+        <div class="col text-right cart">
           <a href="#" class="cart-box">
             <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
             <div class="cart-counter"><span class="cart-counter__value">0</span></div>
@@ -55,17 +55,31 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col">
+          <nav id="myCategory" class="category">
+            <i class="fas fa-list-ul"></i>
+            <ul>
+              <li class="dropdown">
+                <div class="mt-2">
+                  <a
+                    href="#"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Select a category</a
+                  >
+                  <i class="fas fa-caret-down"></i>
+                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <li><a href="#">Free HTML</a></li>
+                  <li><a href="#">Free CSS</a></li>
+                  <li><a href="#">Free JavaScript</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col">
           <form action="" class="search-form">
-            <div class="category">
-              <i class="fas fa-list-ul"></i>
-              <select name="category-shop" id="category">
-                <option>Select a category</option>
-                <option value="Free HTML">Free HTML</option>
-                <option value="Free CSS">Free CSS</option>
-                <option value="Free JavaScript">Free JavaScript</option>
-              </select>
-              <i class="fas fa-caret-down"></i>
-            </div>
             <div class="search-field">
               <input placeholder="Search products..." type="text" />
               <button><i class="fa fa-search"></i></button>
