--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 @import "components/post-box";
 @import "components/product-box";
 
+@import "components/animation-transition";
 @import "components/section-features";
 @import "components/section-brands";
 
