--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -24,6 +24,9 @@ $brands-chevron-color: #fff;
 $panel-border-grey: #e2e2e2;
 $select-color: #000;
 $dot-bg: #e1e1e1;
+//transform
+$cart-counter-transform: translate(50%, -50%);
+
 //Plase change this on white
 $product-box-bg: #fff;
 $text-hover: #fff;
