--- a/src/sass/fontawesome/_mixins.scss
+++ b/src/sass/fontawesome/_mixins.scss
@@ -119,6 +119,12 @@
     @content;
   }
 }
+//Grayscale
+@mixin grayscale_element($value) {
+  -webkit-filter: grayscale($value);
+  -moz-filter: grayscale($value);
+  filter: grayscale($value);
+}
 
 
 
