--- a/src/partials/40_section-promotion.html
+++ b/src/partials/40_section-promotion.html
@@ -16,13 +16,23 @@
         <div class="promotion-box__box">
           <div class="promotion-box__images">
             <div class="col-xs-12 col-md-2 image">
-              <img src="images/s-promotion/furniture3.png" alt="furniture comfort" />
+              <div class="promotion-box__images--bg">
+                <div class="promotion-box__images--img1">
+                  <div class="promotion-box--content">
+                    <h3><span>OFFICE</span> CHAIR</h3>
+                    <h4>COLLECTION</h4>
+                    <p class="promotion-box__images-price">$200.00</p>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-xs-12 col-md-2 image">
-              <img
-                src="images/s-promotion/furniture-promo2.png"
-                alt="furniture comfort"
-              />
+              <div class="promotion-box__images--img2">
+                <div class="promotion-box--content down">
+                  <h3><span>SPECIAL</span> COLLECTION</h3>
+                  <h4>SAVE UP 45% OF FURNITURE</h4>
+                </div>
+              </div>
             </div>
           </div>
         </div>
