--- a/src/partials/40_section-promotion.html
+++ b/src/partials/40_section-promotion.html
@@ -15,22 +15,28 @@
       <div class="col-xs-12 col-md-6 promotion-box__site">
         <div class="promotion-box__box">
           <div class="promotion-box__images">
-            <div class="col-xs-12 col-md-2 image">
+            <div class="col-xs-12 col-md-12 img1 image">
               <div class="promotion-box__images--bg">
                 <div class="promotion-box__images--img1">
                   <div class="promotion-box--content">
                     <h3><span>OFFICE</span> CHAIR</h3>
-                    <h4>COLLECTION</h4>
-                    <p class="promotion-box__images-price">$200.00</p>
+                    <div>
+                      <h4>COLLECTION</h4>
+                      <p class="promotion-box__images-price">$200.00</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 image">
-              <div class="promotion-box__images--img2">
-                <div class="promotion-box--content down">
-                  <h3><span>SPECIAL</span> COLLECTION</h3>
-                  <h4>SAVE UP 45% OF FURNITURE</h4>
+            <div class="col-xs-12 col-md-12 img2 image">
+              <div class="promotion-box__images--bg">
+                <div class="promotion-box__images--img2">
+                  <div class="promotion-box--content down">
+                    <div class="promotion-box--content-sm2">
+                      <h3><span>SPECIAL</span> COLLECTION</h3>
+                      <h4>SAVE UP 45% OF FURNITURE</h4>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
