--- a/src/sass/components/_promote.scss
+++ b/src/sass/components/_promote.scss
@@ -8,7 +8,7 @@
   @media not all and (hover: none) {
     &:hover {
       .counter {
-        display: block;
+        display: flex;
       }
 
       .hot-deals__button {
@@ -23,7 +23,7 @@
     background-color: $text-color;
     position: relative;
 
-    &--text {
+    &-text {
       color: $text-hover;
       text-transform: uppercase;
       font-size: 20px;
@@ -38,7 +38,6 @@
     right: 5%;
     line-height: 1;
   }
-
   &__dot {
     background-color: $text-hover;
     display: inline-block;
@@ -46,6 +45,10 @@
     height: 13px;
     border-radius: 50%;
     margin: 0 4px;
+
+    &.active {
+      background-color: $primary;
+    }
 
     @media not all and (hover: none) {
       &:hover {
@@ -57,6 +60,7 @@
   &__photo {
     max-height: 100%;
     max-width: 100%;
+    object-fit: cover;
   }
 
   &__product {
@@ -66,7 +70,11 @@
   &__button {
     position: absolute;
     top: 30%;
-    left: 32%;
+    width: 120px;
+    left: 50%;
+    text-transform: uppercase;
+    transform: translateX(-50%);
+    display: none;
   }
 }
 
@@ -75,6 +83,7 @@
   height: 100%;
 
   &__image {
+    object-fit: fill;
     max-width: 100%;
     min-height: 100%;
   }
@@ -96,6 +105,10 @@
     color: $text-hover;
     font-size: 26px;
 
+    &:focus {
+      outline: none;
+    }
+
     @media not all and (hover: none) {
       &:hover {
         background-color: $primary;
@@ -112,6 +125,7 @@
   height: 40%;
   color: $text-hover;
   text-align: center;
+  text-transform: uppercase;
 
   &__header {
     display: inline-block;
@@ -127,14 +141,15 @@
 
   &__button {
     position: absolute;
-    bottom: -30px;
-    width: 30%;
-    left: 35%;
-    height: 60px;
+    text-transform: uppercase;
+    bottom: -25px;
+    width: 150px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 50px;
     border: 0;
     border-radius: 3px;
     line-height: 18px;
-    text-transform: uppercase;
     background-color: $text-hover;
     color: $text-color;
     font-weight: 700;
@@ -148,7 +163,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  opacity: 0.8;
+  opacity: 0.9;
+  display: none;
 
   &__value {
     text-align: center;
@@ -166,17 +182,13 @@
   }
 }
 
-@media (max-width: 996px) {
+@media (max-width: 992px) {
   .overlay__header {
     margin-top: 35px;
   }
 
   .overlay__header--bold {
     margin-top: 15px;
-  }
-
-  .hot-deals__button {
-    left: 22%;
   }
 
   .counter {
@@ -188,7 +200,7 @@
       width: 50px;
       height: 50px;
       margin: 1px;
-      padding: 5px 0 2px 0;
+      padding: 5px 0 2px;
     }
   }
 }
@@ -209,16 +221,10 @@
   .distinguish {
     height: 400px;
   }
-
-  .overlay__button {
-    bottom: -40px;
-  }
 }
 
 @media (max-width: 355px) {
   .overlay__button {
-    font-size: 14px;
     bottom: -45px;
-    height: 50px;
   }
 }
