--- a/src/sass/components/_promote.scss
+++ b/src/sass/components/_promote.scss
@@ -8,7 +8,7 @@
   @media not all and (hover: none) {
     &:hover {
       .counter {
-        display: flex;
+        display: block;
       }
 
       .hot-deals__button {
@@ -22,14 +22,14 @@
     height: 50px;
     background-color: $text-color;
     position: relative;
+  }
 
-    &-text {
-      color: $text-hover;
-      text-transform: uppercase;
-      font-size: 20px;
-      padding: 13px;
-      margin: 0;
-    }
+  &__header-text {
+    color: $text-hover;
+    text-transform: uppercase;
+    font-size: 20px;
+    padding: 13px;
+    margin: 0;
   }
 
   &__dots {
@@ -38,6 +38,7 @@
     right: 5%;
     line-height: 1;
   }
+
   &__dot {
     background-color: $text-hover;
     display: inline-block;
@@ -58,7 +59,7 @@
   }
 
   &__photo {
-    max-height: 100%;
+    max-height: 350px;
     max-width: 100%;
     object-fit: cover;
   }
@@ -70,10 +71,7 @@
   &__button {
     position: absolute;
     top: 30%;
-    width: 120px;
-    left: 50%;
-    text-transform: uppercase;
-    transform: translateX(-50%);
+    left: 35%;
     display: none;
   }
 }
@@ -85,11 +83,12 @@
   &__image {
     object-fit: fill;
     max-width: 100%;
-    min-height: 100%;
+    height: 100%;
+    max-height: 500px;
   }
 
   &__nav {
-    height: 40px;
+    height: 50px;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -129,10 +128,9 @@
 
   &__header {
     display: inline-block;
+    margin-top: 60px;
     font-weight: 200;
     font-size: 50px;
-    line-height: 0;
-    margin-top: 12%;
 
     &--bold {
       font-weight: 600;
@@ -142,14 +140,11 @@
   &__button {
     position: absolute;
     text-transform: uppercase;
-    bottom: -25px;
-    width: 150px;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 50px;
+    bottom: -20px;
+    width: 30%;
+    left: 35%;
+    height: 40px;
     border: 0;
-    border-radius: 3px;
-    line-height: 18px;
     background-color: $text-hover;
     color: $text-color;
     font-weight: 700;
@@ -158,50 +153,49 @@
 
 .counter {
   position: absolute;
-  bottom: 180px;
+  bottom: 150px;
   height: 60px;
   width: 100%;
+  margin-left: 2%;
+  opacity: 0.85;
   display: flex;
   justify-content: center;
-  opacity: 0.9;
-  display: none;
 
   &__value {
     text-align: center;
     color: $text-hover;
-    display: inline-block;
+    display: block;
     width: 70px;
     height: 70px;
     border-radius: 50%;
     background-color: $text-color;
-    margin: 2px;
-    padding: 10px;
+    float: left;
+    margin-left: 10px;
+    padding: 14px;
     text-transform: uppercase;
-    font-size: 18px;
-    line-height: 22px;
   }
 }
 
-@media (max-width: 992px) {
-  .overlay__header {
-    margin-top: 35px;
+.buttons {
+  text-transform: uppercase;
+}
+
+.hot-deals-slider {
+  & .carousel-cell {
+    width: 100%;
   }
+}
 
-  .overlay__header--bold {
-    margin-top: 15px;
-  }
+.counter {
+  bottom: 165px;
 
-  .counter {
-    bottom: 165px;
-
-    &__value {
-      line-height: 18px;
-      font-size: 14px;
-      width: 50px;
-      height: 50px;
-      margin: 1px;
-      padding: 5px 0 2px;
-    }
+  &__value {
+    line-height: 18px;
+    font-size: 14px;
+    width: 50px;
+    height: 50px;
+    margin: 1px;
+    padding: 5px 0 2px 0;
   }
 }
 
@@ -221,10 +215,22 @@
   .distinguish {
     height: 400px;
   }
+
+  .overlay__button {
+    bottom: -40px;
+  }
 }
 
 @media (max-width: 355px) {
   .overlay__button {
+    font-size: 14px;
     bottom: -45px;
+    height: 50px;
+  }
+
+  .distinguish-slider {
+    & .carousel-cell {
+      width: 100%;
+    }
   }
 }
