Renew view on promotion

--- a/src/partials/40_section-promotion.html
+++ b/src/partials/40_section-promotion.html
@@ -19,8 +19,10 @@
               <div class="promotion-box__images--bg">
                 <div class="promotion-box__images--img1">
                   <div class="promotion-box--content">
-                    <h3><span>OFFICE</span> CHAIR</h3>
-                    <div>
+                    <h3 class="promotion-box--content__heading">
+                      <span>OFFICE</span> CHAIR
+                    </h3>
+                    <div class="promotion-box--content_info">
                       <h4>COLLECTION</h4>
                       <p class="promotion-box__images-price">$200.00</p>
                     </div>
@@ -31,8 +33,8 @@
             <div class="col-xs-12 col-md-12 img2 image">
               <div class="promotion-box__images--bg">
                 <div class="promotion-box__images--img2">
-                  <div class="promotion-box--content down">
-                    <div class="promotion-box--content-sm2">
+                  <div class="promotion-box--content__down">
+                    <div class="promotion-box--content__down_info">
                       <h3><span>SPECIAL</span> COLLECTION</h3>
                       <h4>SAVE UP 45% OF FURNITURE</h4>
                     </div>
