--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -71,3 +71,6 @@ $border-radius: $grid-base * 0.5;
 $bp-medium: "800px";
 $bp-large: "1200px";
 $bp-small: "991px";
+$bp-small: "768px";
+$bp-very-small: "511px";
+$bp-very-small1: "400px";
