--- a/src/sass/components/_promotion-box.scss
+++ b/src/sass/components/_promotion-box.scss
@@ -20,51 +20,35 @@
     top: 20px;
     position: relative;
 
-    @include medium-high2 {
-      display: block;
-      flex-direction: column;
-      justify-content: center;
-      top: $grid-base * 2.9;
-      position: relative;
-    }
-
     div {
       display: flex;
       justify-content: center;
       left: 30%;
+    }
 
-      @include desktop {
-        display: flex;
-        justify-content: center;
-        left: -$grid-base * 3;
+    &__down {
+      &_info {
         position: absolute;
-        top: 0;
-      }
-    }
+        right: $grid-base * 1.4;
+        height: 100%;
+        width: 100%;
+        white-space: nowrap;
+        top: $grid-base * 4;
+        text-align: right;
 
-    &-sm {
-      margin-left: $grid-base * 13.4;
-    }
-
-    &.down {
-      h3 {
-        font-size: 26px;
-        color: $primary;
-        @include medium-high2 {
-          right: 6%;
-          position: absolute;
-          text-align: right;
+        h3 {
+          font-size: 26px;
+          color: $primary;
+          top: 0;
+          position: relative;
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
         }
-      }
 
-      h4 {
-        font-size: 14px;
-        @include large-up {
+        h4 {
+          font-size: $font-size-5;
           left: $grid-base * 30.4;
-        }
-        @include medium-high2 {
-          right: 6%;
-          white-space: nowrap;
         }
       }
     }
@@ -81,11 +65,8 @@
     h4 {
       display: block;
       position: absolute;
+      left: 180px;
       top: $grid-base * 3;
-      @include large-up {
-        left: $grid-base * 18.5;
-      }
-
       letter-spacing: 1px;
       font-size: $grid-base * 1.9;
     }
@@ -95,25 +76,10 @@
     left: 0;
     position: relative;
 
-    div {
-      @include desktop {
-        width: $grid-base * 45;
-        left: -$grid-base * 1.2;
-      }
-
-      @include tablet {
-        width: $grid-base * 33.3;
-        height: $grid-base * 12.1;
-        left: -13px;
-      }
-    }
-
     &--bg {
       background-color: $white-light;
       position: relative;
-      @include large-up {
-        left: -$grid-base * 1.6;
-      }
+      left: -$grid-base * 1.6;
       height: $grid-base * 14.4;
       padding-bottom: 1px;
     }
@@ -125,20 +91,8 @@
         position: center;
         repeat: no-repeat;
       }
+      @extend .partial_image;
       height: $grid-base * 14.4;
-      @include medium-high2 {
-        width: $grid-base * 53.9;
-      }
-      @include smartfon {
-        width: $grid-base * 51.5;
-      }
-
-      width: $grid-base * 48.6;
-
-      @include grayscale_element(5%);
-      @include medium-high2 {
-        margin-bottom: $grid-base * 2.9;
-      }
     }
 
     &--img2 {
@@ -149,35 +103,13 @@
         repeat: no-repeat;
       }
       height: $grid-base * 16.5;
-      @include smartfon {
-        width: $grid-base * 51.5;
-      }
-
-      width: $grid-base * 48.6;
-      @include medium-high2 {
-        width: $grid-base * 55.5;
-      }
-      @include grayscale_element(5%);
-      @include large-up {
-        width: $grid-base * 54;
-      }
-
-      div {
-        left: 3px;
-        width: 100%;
-        height: $grid-base * 8;
-      }
+      @extend .partial_image;
     }
 
     &-price {
       position: absolute;
       top: $grid-base * 4.5;
-      @include large-up {
-        left: $grid-base * 18.6;
-      }
-      @include tablet {
-        left: 86px;
-      }
+      left: $grid-base * 18;
       font-size: $grid-base * 3.4;
       color: $primary;
       font-weight: 600;
@@ -185,25 +117,14 @@
   }
 
   &__box {
-    @include medium-high2 {
-      position: absolute;
-    }
     position: relative;
     top: -2px;
-    @include medium-high2 {
-      left: 12px;
-    }
     left: 0;
     width: 100%;
   }
 
   &__site {
-    top: $grid-base * 1.9;
-
-    @include medium-high2 {
-      top: 9px;
-      left: $grid-base * 1.6;
-    }
+    top: $grid-base * 1.1;
   }
 
   &__overlay {
@@ -211,9 +132,6 @@
     background: $gray-light;
     opacity: 0.7;
     width: 90%;
-    @include medium-high2 {
-      height: 90%;
-    }
     height: 85%;
     padding: 3% 0;
     position: absolute;
@@ -223,10 +141,7 @@
 
   &__content {
     padding: 13% 13% 0;
-    @include large-up {
-      top: 8px;
-    }
-    top: -$grid-base * 2.2;
+    top: 8px;
     position: relative;
     outline: none;
     margin-bottom: $grid-base * 1.8;
@@ -235,19 +150,13 @@
     h4 {
       text-transform: uppercase;
       font-size: 35px;
-      @include tablet {
-        font-size: 18px;
-      }
       font-weight: 600;
       color: $white;
       white-space: nowrap;
     }
 
     h3 {
-      @include large-up {
-        font-size: 52px;
-      }
-      font-size: 35px;
+      font-size: 52px;
       font-weight: bold;
     }
   }
@@ -261,16 +170,6 @@
     width: $grid-base * 15.9;
     height: $grid-base * 8.5;
     font-size: 48px;
-
-    @include tablet {
-      padding: 15px;
-      max-height: $grid-base * 7.5;
-      font-size: 28px;
-    }
-
-    @include medium-small {
-      width: 51%;
-    }
   }
 }
 
@@ -283,35 +182,15 @@
   clear: both;
 
   &:last-child {
-    @include medium-high2 {
-      left: -13px;
-    }
-
-    top: 14px;
-    @include tablet {
-      left: -28px;
-    }
-
-    @include large-up {
-      top: 28px;
-    }
-
-    @include tablet {
-      top: 5px;
-      height: $grid-base * 17;
-    }
+    top: $grid-base * 2.3;
+    right: -$grid-base * 1.5;
+    position: relative;
   }
 }
 
 .partial_photo {
   position: relative;
-  @include large-up {
-    padding: 31% 0;
-  }
-  @include medium-high {
-    padding: 34% 0;
-  }
-  padding: 37% 0;
+  padding: 31% 0;
   top: $grid-base;
   overflow: hidden;
   align-items: flex-end;
@@ -323,22 +202,15 @@
 
 .img1 {
   &.image {
-    @include large-up {
-      left: -15px;
-    }
+    left: $grid-base * 1.5;
   }
 
-  h4 {
-    @include tablet {
-      left: $grid-base * 8.2;
-    }
+  div {
+    height: $grid-base * 15;
   }
 }
 
-.img2.image {
-  div {
-    @include tablet {
-      left: 0;
-    }
-  }
+.partial_image {
+  @include grayscale_element(5%);
+  width: $grid-base * 54;
 }
