--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -50,6 +50,7 @@ $font-size-8: 13px;
 $font-size-9: 17px;
 $font-size-10: 32px;
 $font-size-11: 20px;
+$font-size-12: 52px;
 
 //Transform
 $cart-counter: translate(50%, -50%);
